--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,43 @@
+body {
+  background-color: #D4D6D6; }
+
+/***    main container div  **/
+.main {
+  margin-left: 1%;
+  margin-right: 1%; }
+
+/**    start of icons      **/
+i {
+  color: #E8EAEB; }
+
+.fa {
+  padding-top: 0.2em;
+  padding-left: 30%;
+  font-size: 6em; }
+
+/**    end of icons      **/
+/**  the line under the icon  **/
+.stick {
+  border: 2px solid white;
+  margin: 1.5em 0em 0em 6.5em;
+  width: 7em;
+  display: block;
+  /*******************************/
+  /**   start of words     **/
+  /**   end of words      **/ }
+  .stick p {
+    color: #E8EAEB; }
+
+/**  start of on hover to change background colors  **/
+.col:hover {
+  background-color: #E8EAEB;
+  cursor: pointer; }
+  .col:hover .fa, .col:hover h3, .col:hover p, .col:hover .stick {
+    color: black; }
+
+/**  end of on hover     **/
+/***********************************************************/
+/**   Reponsive Grid  positioning of  columns             **/
 /*  SECTIONS  */
 .section {
   clear: both;
@@ -6,9 +46,12 @@
 
 /*  COLUMN SETUP  */
 .col {
+  background-color: #343536;
+  border: 1px solid black;
   display: block;
   float: left;
-  margin: 1% 0 1% 1.6%; }
+  height: 280px;
+  transition: background 1s, transform 1s; }
 
 .col:first-child {
   margin-left: 0; }
