--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,7 +1,91 @@
 @import "../../bower_components/susy/sass/susy";
 
+$body: #D4D6D6;
+$h3-color: #E8EAEB;
+
+body {
+  background-color: $body;
+}
+
+/***    main container div  **/
+
+.main{
+  margin-left: 1%;
+  margin-right: 1%;
+}
+
+/**    start of icons      **/
+i{
+  color: $h3-color;
+
+}
+
+.fa{
+  padding-top: 0.2em;
+  padding-left: 30%;
+  font-size: 6em;
+  // border-bottom: 2px solid white;
+}
+/**    end of icons      **/
 
 
+/**  the line under the icon  **/
+.stick{
+  border: 2px solid white;
+  margin: 1.5em 0em 0em 6.5em;
+  width: 7em;
+  display: block;
+/*******************************/
+
+
+/**   start of words     **/
+h3{
+  // padding-top: 2em;
+// padding: 3em;
+  // color: $h3-color;
+}
+
+p{
+  color: $h3-color;
+}
+/**   end of words      **/
+
+
+}
+/**  start of on hover to change background colors  **/
+.col:hover{
+  .fa, h3, p, .stick{
+    color: black;
+  }
+  background-color: $h3-color;
+  cursor: pointer;
+}
+
+// .fa:hover{
+//   p{
+//     color: black;
+//   }
+//
+// }
+
+// .col:hover{
+//   background-color: white;
+//   cursor: pointer;
+// }
+// .fa:hover{
+//   p{
+//     color: $h3-color;
+//   }
+// }
+
+
+/**  end of on hover     **/
+
+
+
+
+/***********************************************************/
+/**   Reponsive Grid  positioning of  columns             **/
 /*  SECTIONS  */
 .section {
 	clear: both;
@@ -11,9 +95,16 @@
 
 /*  COLUMN SETUP  */
 .col {
+  background-color: #343536;
+  border: 1px solid black;
 	display: block;
 	float:left;
-	margin: 1% 0 1% 1.6%;
+  height: 280px;
+  transition: background 1s, transform 1s;
+  ;
+  // padding: 0em 0.1em 0em 0.1em;
+
+	// margin: 1% 0 1% 1.6%;
 }
 .col:first-child { margin-left: 0; }
 
