--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,6 +6,9 @@ body {
   margin-left: 1%;
   margin-right: 1%; }
 
+small {
+  padding-left: 2em; }
+
 /**    start of icons      **/
 i {
   color: #E8EAEB; }
@@ -18,27 +21,34 @@ i {
 /**    end of icons      **/
 /**  the line under the icon  **/
 .stick {
-  border: 2px solid white;
-  margin: 1.5em 0em 0em 6.5em;
+  /*  Bar  */
+  border: 1px solid #D4D6D6;
+  margin: 1em 0em 0em 6em;
+  /* margin: 0 auto; */
   width: 7em;
   display: block; }
 
 /*******************************/
 /**   start of words     **/
 h3 {
-  padding-left: 7em;
+  font-size: 1.5em;
+  padding-left: 4.5em;
   color: #E8EAEB; }
 
 p {
-  color: #E8EAEB; }
+  padding-left: 1.5em;
+  font-size: 1em;
+  color: #343536; }
 
 /**   end of words      **/
+/****************************************************/
+/***       Borders around boxes        **/
 /**  start of on hover to change background colors  **/
 .col:hover {
-  background-color: #E8EAEB;
+  background-color: #D4D6D6;
   cursor: pointer; }
-  .col:hover .fa, .col:hover h3 {
-    color: black; }
+  .col:hover .fa, .col:hover h3, .col:hover p {
+    color: #343536; }
 
 /**  end of on hover     **/
 /***********************************************************/
@@ -52,7 +62,6 @@ p {
 /*  COLUMN SETUP  */
 .col {
   background-color: #343536;
-  border: 1px solid black;
   display: block;
   float: left;
   height: 280px;
