--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,37 +1,25 @@
 @import "../../bower_components/susy/sass/susy";
 
-
 $body: #D4D6D6;
 $h3-color: #E8EAEB;
 
 body {
+  width: 100%;
   background-color: $body;
+  min-width: 420px;
 }
 
 /*** bootstrap wrapper **/
 
-.container-fluid{
-  margin-left: 1%;
-  margin-right: 1%;
-}
-
- @grid-columns{
-  position: relative;
-  min-height: 1px;
-  padding-right: 15px;
-  padding-left: 15px;
-  background-color: yellowgreen;
-}
-.row {
-    margin-right: -15px;
-    margin-left: -15px;
-
+.container{
+  width:100%;
+  height: 100%;
 }
 
 
-// small{
-//   padding-left: 2em;
-// }
+small{
+  padding-left: 2em;
+}
 
 /**    start of icons      **/
 i{
@@ -49,17 +37,16 @@ i{
 /**    end of icons      **/
 
 
+
 ul{
   margin-top: 0;
-  margin-bottom: 10px;
-  background-color: indianred;
+  background-color: $h3-color;
 }
 
 /**  the line under the icon  **/
 .stick{/*  Bar  */
   border: 2px solid $body;
   margin: 0 auto;
-  /* margin: 0 auto; */
   width: 7em;
   display: block;
   transition: transform .2s
@@ -70,7 +57,6 @@ ul{
 
 /**   start of words     **/
 h3{
-// padding-top: 2em;
 font-size: 1.5em;
 padding-left: 4.5em;
 color: $h3-color;
@@ -86,120 +72,75 @@ p{
 /**   end of words      **/
 /****************************************************/
 
-/***       Borders around boxes        **/
-// #one{
-//   background-color: blue;
-// }
-//
-// #two{
-//   border-bottom: 1px solid $body;
-//   border-right: 1px solid $body;
-//   border-left: 1px solid $body
-// }
-//
-// #three{
-//   border-bottom: 1px solid $body;
-//   border-left: 1px solid $body;
-// }
-//
-// #five{
-//   border-right: 1px solid $body;
-//   border-left: 1px solid $body;
-// }
-
-
-
-
 /**  start of on hover to change background colors  **/
-// .col-md-4:hover{
-//   .fa, h3, p, {
-//     color: #343536;
-//   }
-//   .stick{
-//     border-color: #343536;
-//     transform: translateY(.7in);
-//   }
-//   .fa{
-//     transform: translateY(.16in);
-//   }
-//   h3, p{
-//     transform: translateY(-.1in);
-//   }
-//
-//   background-color: $body;
-//   cursor: pointer;
-// }
+.col:hover {
+  .fa, h3, p, {
+    color: #343536;
+  }
+  .stick{
+    border-color: #343536;
+    transform: translateY(.7in);
+  }
+  .fa{
+    transform: translateY(.16in);
+  }
+  h3, p{
+    transform: translateY(-.1in);
+  }
 
+  background-color: $body;
+  cursor: pointer;
+}
 
 
 .col:hover{
   background-color: white;
   cursor: pointer;
 }
-// .fa:hover{
-//   p{
-//     color: $h3-color;
-//   }
-// }
-//
-
+.fa:hover{
+  p{
+    color: $h3-color;
+  }
+}
 /**  end of on hover     **/
 
 
 
 
 /***********************************************************/
-/**   Reponsive Grid  positioning of  columns             **/
-/*  SECTIONS  */
-// .section {
-// 	clear: both;
-// 	padding: 0px;
-// 	margin: 0px;
-// }
+/*  row  */
+.row {
+	clear: both;
+	padding: 0px;
+	margin: 0px;
+}
 
 /*  COLUMN SETUP  */
-.col-md-4 {
+.col {
   background-color: #343536;
-  // border-spacing: 1px solid black;
-	display: block;
-	float:left;
-  height: 280px;
   transition: background 1s, transform 1s;
-  // border-radius: 5px;
-
-  // padding: 0em 0.1em 0em 0.1em;
-
-	// margin: 1% 0 1% 1.6%;
 }
-// .col:first-child { margin-left: 0; }
-//
-// /*  GROUPING  */
-// .group:before,
-// .group:after { content:""; display:table; }
-// .group:after { clear:both;}
-// .group { zoom:1; /* For IE 6/7 */ }
-// /*  GRID OF THREE  */
-// .span_3_of_3 { width: 100%; }
-// .span_2_of_3 { width: 66.13%; }
-// .span_1_of_3 { width: 32.26%; }
 
-/*  GO FULL WIDTH BELOW 480 PIXELS */
-// @media only screen and (max-width: 480px) {
-// 	.col {  margin: 1% 0 1% 0%; }
-// 	.span_3_of_3, .span_2_of_3, .span_1_of_3 { width: 100%; }
-// }
 /* Extra small devices (phones, less than 768px) */
 /* No media query since this is the default in Bootstrap */
 
 /* Small devices (tablets, 768px and up) */
-@media (min-width: @screen-sm-min) {
-
+@media only screen and (max-width: 768px) {
+.col{
+  margin:1% 0 1% 0%;
+}
 }
 
 /* Medium devices (desktops, 992px and up) */
-@media (min-width: @screen-md-min) {
+@media only screen and (max-width: 992px) {
+  .col{
+    margin: 1% 0 1% 0%;
+  }
 }
 
 /* Large devices (large desktops, 1200px and up) */
-@media (min-width: @screen-lg-min) {
+@media only screen and (max-width: 1200px) {
+  .col{
+    margin: 1% 0 1% 0%;
+  }
 }
